[tool.poetry]
name = "MediaFetcher"
version = "0.1.0"
description = "Handy and efficient utility bot that simplifies the process of downloading and sharing videos and audio directly within telegram."
authors = ["Lethiferal"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
tgcrypto = "^1.2.5"
aiohttp = "^3.8.5"
yt-dlp = "^2023.7.6"
flask = "^2.3.3"
pillow = "^10.0.1"
moviepy = "^1.0.3"
python-ffmpeg = "^2.0.4"
pyrogram-repl = "^2.0.106"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
